Operating Systems/ex2/errors.txt
/mnt/c/Studies/3rd year/CS/Operating Systems/ex2/files/students/Compilation_Error_gets_10/error1.c: In function ‘main’:
/mnt/c/Studies/3rd year/CS/Operating Systems/ex2/files/students/Compilation_Error_gets_10/error1.c:5:5: error: expected declaration or statement at end of input
    5 |     printf("dfg");
      |     ^~~~~~
